# Reference-FMUs

./: CMakeLists.txt
feelpp/: CMakeLists.txt
feelpp/Heat/: FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  buildDescription.xml  config.h  heat.cpp  heat.h  model.c
feelpp_mor/: CMakeLists.txt
feelpp_mor/ReducedBasis/: FMI1CS.xml  FMI1ME.xml  FMI2.xml  FMI3.xml  README.md  buildDescription.xml  config.h  model.c  reducedbasis.cpp  reducedbasis.h
src/: cosimulationFeelpp.c
